[package]
name = "fast_retag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
askama = "0.12.1"
chrono = "0.4.31"
edit = "0.1.5"
id3 = "1.12.0"
image = "0.24.7"
toml = "0.8.8"

[dependencies.serde]
version = "1.0.193"
features = ['derive']
