[package]
name = "fast_retag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
askama = "0.12.1"
chrono = "0.4.38"
edit = "0.1.5"
id3 = "1.14.0"
image = "0.25.2"
toml = "0.8.19"

[dependencies.serde]
version = "1.0.210"
features = ['derive']
